20140226两地版本合并
1.拖拽句柄样式修改
2.下拉框增加联想功能
3.SPC控件预览翻页数据删除错误问题解决
4.部分控件字体样式设置
5.单值图没有数据时出图时间、数据点数、等统计信息纠正

--- a/code/index.html
+++ b/code/index.html
@@ -156,8 +156,8 @@
             <div id="TitleSpaceDiv"></div>
             <div id="TitleMenuDiv">
                 <div id="TopLeftMenuDiv">
-                    <div id="new" title="新建">
-                        <img alt="new" src="Img/TopIcon/dashboard-plus.png"/></div>
+                    <div id="new" title="新建SPC页面">
+                        <img alt="new" src="Img/TopIcon/dashboardspc-plus.png"/></div>
                     <div id="save" title="保存(Ctrl+S)">
                         <img alt="save" src="Img/TopIcon/save.png"/></div>
                     <div id="undo" title="撤销(Ctrl+Z)" style="display: none;">
@@ -185,7 +185,7 @@
                         <!--<img alt="ScriptPage" src="Img/TopIcon/script.png"/></div>-->
                 </div>
                 <div id="alignmentMenuContainer">
-                    <div id="alignmentMenu" style="right: 135px;z-index: 999; width: 120px; height: 255px; background-color: White; position: absolute; top: 64px; margin-left: -72px; border-radius: 5px; box-shadow: 0px 0px 3px #000000;">
+                    <div id="alignmentMenu" style="right: 135px;z-index: 10000; width: 120px; height: 255px; background-color: White; position: absolute; top: 64px; margin-left: -72px; border-radius: 5px; box-shadow: 0px 0px 3px #000000;">
                         <ul style="margin-left: 40px; margin-top: 5px;">
                             <li id="liLeft" onmouseover="LiMouseOver($(this))" onmouseout="LiMouseOut($(this))" style="cursor: pointer; list-style-image: url('Img/TopIcon/left_indent.png'); vertical-align: top;">
                                 左对齐
