20140311结束版本合并提交
1.SPC图放大正常
2.数据钻取与控件传参同时支持
3.单值图统计信息面板编辑项备注与图形名称默认为空，且可编辑支持
4.URL参数面板在小分辨率下布局问题解决

--- a/code/JS/Controls/CustomMDRChart/tabTemplates.html
+++ b/code/JS/Controls/CustomMDRChart/tabTemplates.html
@@ -143,7 +143,7 @@
                 <td class="CustomprortityPanelTabletd0">5</td>
                 <td class="CustomprortityPanelTabletd1"><input type="checkbox" name="ruleNum" value="5" style="margin-top:-4px;width:auto;"/>K+1个点中有K个点，距离中心线（同侧）大于2个标准差</td>
                 <td class="CustomprortityPanelTabletd0"><input type="number" style="width: 40px" id="K5" value="2" min="2" max="4"/></td>
-                <td class="CustomprortityPanelTabletd1"><input type="text" id="color5" class="SigmaRulColor"/></td>
+                <td class="CustomprortityPanelTabletd1"><input type="text" id="Kcolor5" class="SigmaRulColor"/></td>
             </tr>
             <tr>
                 <td class="CustomprortityPanelTabletd0">6</td>
