--- a/code/test.html
+++ b/code/test.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>动态填充右键菜单项目</title>
+    <title>打开新页面测试权限</title>
     <style type="text/css">
         body{
             font-family:'微软雅黑 宋体 arial';
@@ -17,34 +17,16 @@
             background-color:#f1f1f1;
         }
     </style>
-    <script src="JS/jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="contextRMenu.js" type="text/javascript"></script>
 </head>
 <body onselectstart="return false;">
-    <div id="lastDIV" class="panelsty">测试右键菜单,动态加载</div>
-　<div class="contextRMenu" id="myMenu1">
-        <ul>
-        </ul>
-    </div>
-    <div class="DetailPanelsty">
-        <p>1.基于Jquery contextMenu进行修改，主要支持：</p>
-        <p>(1.1)菜单项动态填充</p>
-        <p>(1.2)id,class,以及其它符合$(item) item格式的绑定</p>
-        <p>(1.3)支持返回选中菜单元素对象</p>
+    <div>
+        <input type="text" value="http://10.3.250.120:7001/qpc-app/iscas_agivis/code/index.html?card=123123&sessionId=11111" id="UserIndoTxt" style="width:85%;"/><br/>
+        <input id="btnTest" type="button" value="跳转到>>" onclick="ClickFun()">
     </div>
 </body>
 </html>
 <script type="text/javascript">
-    $('#lastDIV').contextRMenu('myMenu1', {
-        onContextMenu: function(e) {
-            $("#myMenu1").find("ul").html("<li class='menuitem'>111</li><li class='menuitem'>222</li>" +
-                    "<li class='menuitem'>333</li><li class='menuitem'>444</li><li class='menuitem'>555</li><li class='menuitem'>666</li>");
-          return true;
-        },
-        bindings: {
-            '.menuitem': function(trigger,tar,item) {
-                alert('Trigger was '+trigger.id+'\nAction was'+$(item).html());
-            }
-        }
-    });
+    function ClickFun(){
+        window.open(document.getElementById("UserIndoTxt").value, "_blank"); //注意第二个参数
+    }
 </script>
