--- a/spcView/view.html
+++ b/spcView/view.html
@@ -27,8 +27,9 @@
     <link id="lkTheme" href="js/FrameThemes/theme1.css" rel="stylesheet" type="text/css"/>
     <link type="text/css" rel="stylesheet" href="js/layout/themes/base/jquery.ui.all.css"/>
     <link type="text/css" rel="stylesheet" href="customizePanel.css"/>
-	<link href="JS/Controls/NewTimePicker/css/jquery-ui-1.8.17.custom.css" rel="stylesheet" type="text/css"/>
-	 <link href="JS/Controls/NewTimePicker/css/jquery-ui-timepicker-addon.css" rel="stylesheet" type="text/css"/>
+	<link href="js/Controls/NewTimePicker/css/jquery-ui-1.8.17.custom.css" rel="stylesheet" type="text/css"/>
+	 <link href="js/Controls/NewTimePicker/css/jquery-ui-timepicker-addon.css" rel="stylesheet" type="text/css"/>
+     <link href="js/jquery.customMenu.css" rel="Stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
     <script src="js/EncDnc.Base64/EncDnc.Base64.js" type="text/javascript"></script>
     <!--引用-->
@@ -87,9 +88,9 @@
     <script src="js/export/export.js" type="text/javascript"></script>
 
 	<!--  //日期时间控件引用-->
-	<script src="JS/Controls/NewTimePicker/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script>
-	<script src="JS/Controls/NewTimePicker/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
-	<script src="JS/Controls/NewTimePicker/jquery-ui-timepicker-zh-CN.js" type="text/javascript"></script>
+	<script src="js/Controls/NewTimePicker/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script>
+	<script src="js/Controls/NewTimePicker/jquery-ui-timepicker-addon.js" type="text/javascript"></script>
+	<script src="js/Controls/NewTimePicker/jquery-ui-timepicker-zh-CN.js" type="text/javascript"></script>
 </head>
 <body>
 <!--markeluo 20130821 0846 markeluo 点击Chart Point菜单处理 #start-->
@@ -164,6 +165,9 @@
         <div id="workspace">
         </div>
     </div>
+    <div style="z-index: 1;position: absolute;top: 1px; opacity: 0;width: 1px;height: 1px;">
+        <span id="copyButton1" class="btn">复制</span>
+    </div>
     <div class="pop pop1">
         <div class="title">图形属性</div>
         <div class="content"></div>
@@ -222,7 +226,7 @@
         <div class="toolbar">
             <div class="left">
                 样本数据 总共有
-                <span class="count">999</span>
+                <span class="count">0</span>
                 个样本数据
             </div>
             <div class="right">
@@ -304,14 +308,40 @@
                     </td>
                 </tr>
             </table>
+
+          <!--  20140304 添加显示条件的table-->
+            <table id="filtersTable" style="width:100%;height:100px;border-width:1px;z-index:999999; display:block; overflow:auto;margin-left:0px;">
+            </table>
+          <!--  //end-->
         </div>
         <div class="operation">
+            <input type="button" id='addFilter' value='添加' style="width:100px;"/>
             <button id="filterBox_save">保存</button>
             <button id="filterBox_cancel">取消</button>
         </div>
     </div>
 </div>
+
+<div class="modal hide" id="zoomDiv">
+<div class="modal-header" style="text-align: center; background-color: #03F">
+            <button type="button" class="close" data-dismiss="modal" ria-labelledby="myModalLabel"
+                aria-hidden="true">
+                ×</button>
+            <h3 id="myModalLabel">放大视图</h3>
+        </div>
+        <div class="modal-body" style="height:500px">
+        </div>
+</div>
 <style type="text/css">
+    /*zoomDiv*/
+    #zoomDiv .modal-body{
+    max-height:420px;
+    }
+    #zoomDiv
+    {
+        z-index:9999;
+    }
+    
     /*main*/
 #adv_main {
     width: 100%;
@@ -325,19 +355,23 @@
 
     /*filterBox*/
 .filterBox {
-    width: 400px;
-    height: 170px;
+    /*width: 400px;*/
+    /*height: 170px;*/
+    height:auto;
+    width:430px;
     position: absolute;
     left: 50%;
     top: 50%;
     margin-left: -200px;
     margin-top: -85px;
     display: none;
+    z-index: 999999;
 }
 
 .filterBox .content {
-    width: 400px;
-    height: 100px;
+    width: 430px;
+    /*height: 100px;*/
+    height:auto;
     background-color: #ffffff;
 }
 
@@ -614,10 +648,57 @@
 <link href="Lib/colorpicker/spectrum.css" rel="stylesheet" type="text/css"/>
 <script src="Lib/colorpicker/spectrum.js"></script>
 <!--advance-->
+
+<script src="ZeroClipboard/ZeroClipboard.min.js" type="text/javascript"></script>
+<script src="js/jquery.customMenu.js"></script>
+
 </body>
 </html>
 <script language="javascript" type="text/javascript">
+    var clip = null;
     $(document).ready(function () {
+
+        var $copyButtonHide = $('#copyButton1');
+        //初始化复制功能菜单
+        $.customMenu({
+            selector: '.wijmo-wijgrid-innercell',//'th[role="columnheader"],td[role="gridcell"]',
+            trigger: 'hover',
+            delay: 600,
+            autoHide: true,
+            callback: function (key, options) {
+                //alert('callback');
+            },
+            items: {
+                "copy": { name: "复制", icon: "copy" }
+            },
+            onShow:function(target){
+                var cpBtnUL = $('#copyButton').parent().parent();
+                cpBtnUL.attr('id','copyButton-ul');
+                $copyButtonHide.data('copyValue',target.text());
+
+                clip.reposition('copyButton-ul');
+
+                $(clip.div).css({
+                    width: cpBtnUL.width() + 10,
+                    height: cpBtnUL.height()
+                }).find('embed').css({
+                            width: cpBtnUL.width() + 10,
+                            height: cpBtnUL.height()
+                        });
+            }
+        });
+        //初始化剪切板插件
+        ZeroClipboard.setMoviePath("ZeroClipboard/ZeroClipboard.swf");
+        clip = new ZeroClipboard.Client();
+        clip.glue('copyButton1');
+        clip.setHandCursor(true);
+        clip.addEventListener('mouseDown', function () {
+            clip.setText( $copyButtonHide.data('copyValue') );
+        });
+        clip.addEventListener('complete', function () {
+            alert('复制成功!');
+        });
+
         $(".dropdown-menu>li").click(function () {
             $(".dropdown-menu").parent().removeClass('open');
             if ($(this).find("a").text() == "图片") {
